Fix typo in print media query comment

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         /* --- STYLES D'IMPRESSION CRITIQUES (PDF) --- */
         @media print {
-            /* Configuration de la page A4 Paysage */
+            /* Configuration de la page A4 hPaysage */
             @page {
                 size: landscape;
                 margin: 0; /* Supprime les marges blanches du navigateur */
